--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,8 +39,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: |
-            ${{ matrix.os == 'windows-latest' && 'target/release/nvm.exe' || 'target/release/nvm' }}
-          asset_name: |
-            ${{ matrix.os == 'windows-latest' && 'nvm-windows.exe' || (matrix.os == 'macos-latest' && 'nvm-macos' || 'nvm-linux') }}
+          asset_path: ${{ matrix.os == 'windows-latest' && 'target/release/nvm.exe' || (matrix.os == 'macos-latest' && 'target/release/nvm' || 'target/release/nvm') }}
+          asset_name: ${{ matrix.os == 'windows-latest' && 'nvm-windows.exe' || (matrix.os == 'macos-latest' && 'nvm-macos' || 'nvm-linux') }}
           asset_content_type: application/octet-stream
