--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
         with:
-          tag_name: ${{ secrets.MY_GITHUB_TOKEN }}
+          tag_name: ${{ github.ref }}
           release_name: "Release ${{ github.ref }}"
           draft: false
           prerelease: false
@@ -55,7 +55,7 @@ jobs:
       - name: Upload Release Asset
         uses: actions/upload-release-asset@latest
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ secrets.MY_GITHUB_TOKEN }}
           asset_path: ${{ steps.set_asset.outputs.asset_path }}
           asset_name: ${{ steps.set_asset.outputs.asset_name }}
           asset_content_type: application/octet-stream
