--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Upload Release Asset
         uses: actions/upload-release-asset@latest
         with:
-          upload_url: ${{ secrets.MY_GITHUB_TOKEN }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ steps.set_asset.outputs.asset_path }}
           asset_name: ${{ steps.set_asset.outputs.asset_name }}
           asset_content_type: application/octet-stream
