--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,11 +27,12 @@ jobs:
       - name: Build
         run: cargo build --release
 
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
           release_name: "Release ${{ github.ref }}"
@@ -54,8 +55,6 @@ jobs:
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ steps.set_asset.outputs.asset_path }}
