--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,8 +70,8 @@ jobs:
             $env:asset_path = "target/release/nvm"
             $env:asset_name = "nvm-linux"
           }
-          echo "asset_path=$env:asset_path" >> $GITHUB_ENV
-          echo "asset_name=$env:asset_name" >> $GITHUB_ENV
+          echo "asset_path=$env:asset_path" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          echo "asset_name=$env:asset_name" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@latest
@@ -79,6 +79,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.create_release.outputs.upload_url }}
-          asset_path: ${{ env.asset_path }}
-          asset_name: ${{ env.asset_name }}
+          asset_path: ${{ env.asset_path }}  # 确保这里引用了正确的环境变量
+          asset_name: ${{ env.asset_name }}  # 确保这里引用了正确的环境变量
           asset_content_type: application/octet-stream
