--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,9 @@ on:
 permissions:
   contents: write # 确保有权限创建发布
 
+env:
+  RUST_VERSION: "1.81"
+
 jobs:
   create_release:
     runs-on: ubuntu-latest
@@ -65,20 +68,22 @@ jobs:
     needs: create_release # 确保在创建发布之后再运行
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Rust
-        uses: actions-rs/toolchain@v1
+      - uses: hecrj/setup-rust-action@v1
         with:
-          toolchain: stable # 或者您想使用的特定版本
-
-      - name: Install musl target
-        run: rustup target add x86_64-unknown-linux-musl
-
-      - name: Build
-        run: cargo build --release --target x86_64-unknown-linux-musl # 使用 musl 目标构建
-
+          rust-version: ${{env.RUST_VERSION}}
+          targets: x86_64-unknown-linux-musl
+      - uses: Swatinem/rust-cache@v2
+        with:
+          key: static-linux-binary
+      - name: Install musl tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends musl-tools
+      - uses: actions/checkout@v4
+      - name: Build release binary
+        run: cargo build --release --target x86_64-unknown-linux-musl
+      - name: Strip binary from debug symbols
+        run: strip target/x86_64-unknown-linux-musl/release/nvm
       - name: Package
         run: tar -czf nvm-linux.tar.gz -C target/x86_64-unknown-linux-musl/release nvm -C ../../.. install/linux/ # 修改路径，确保正确打包
 
