--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,10 +79,13 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends musl-tools
-      - name: Install OpenSSL
-        run: sudo apt-get install -y libssl-dev
+      - name: Install pkg-config
+        run: sudo apt-get install -y pkg-config
+        
       - name: Set OpenSSL environment variable
-        run: echo "OPENSSL_DIR=/usr" >> $GITHUB_ENV
+        run: |
+          echo "OPENSSL_DIR=/usr" >> $GITHUB_ENV
+          echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
         
       - uses: actions/checkout@v4
       - name: Build release binary
