--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,13 +79,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends musl-tools
-      - name: Install pkg-config
-        run: sudo apt-get install -y pkg-config
-        
-      - name: Set OpenSSL environment variable
-        run: |
-          echo "OPENSSL_DIR=/usr" >> $GITHUB_ENV
-          echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
+      - name: Install openssl
+        run: sudo apt-get install pkg-config libssl-dev
         
       - uses: actions/checkout@v4
       - name: Build release binary
