--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,7 +90,7 @@ jobs:
           mkdir -p install-linux
           cp target/x86_64-unknown-linux-musl/release/nvm install-linux/
           cp -r install/linux/* install-linux/
-          tar -czf nvm-linux.tar.gz -C install-linux nvm
+          tar -czf nvm-linux.tar.gz -C install-linux .
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@latest
