--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -112,14 +112,14 @@ jobs:
           rust-version: ${{env.RUST_VERSION}}
           targets: x86_64-unknown-linux-musl
 
-      - uses: actions/checkout@v4
-      - name: Build
-        run: cargo build --release
-
       - name: Install Inno Setup
         run: |
           curl -L -o innosetup.exe https://jrsoftware.org/download.php/is.exe
-          Start-Process -Wait -FilePath innosetup.exe /VERYSILENT /SUPPRESSMSGBOXES /NORESTART
+          Start-Process -FilePath "innosetup.exe" -ArgumentList "/VERYSILENT", "/SUPPRESSMSGBOXES", "/NORESTART" -Wait
+  
+      - uses: actions/checkout@v4
+      - name: Build
+        run: cargo build --release
 
       - name: Build Installer with Inno Setup
         run: |
