--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -110,11 +110,6 @@ jobs:
       - uses: hecrj/setup-rust-action@v1
         with:
           rust-version: ${{env.RUST_VERSION}}
-          targets: x86_64-unknown-linux-musl
-
-      - name: Set up Inno Setup
-        run: |
-          choco install innosetup
   
       - uses: actions/checkout@v4
       - name: Build
@@ -122,7 +117,7 @@ jobs:
 
       - name: Compile the installer
         run: |
-          iscc /Qp "install/win/install.iss" # 替换为你的 .iss 文件路径
+          iscc /Qp "install/win/install.iss"
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@latest
